docs/semantic-ontology/linkml/tests/valid/amendment-two-sections.jsonld
{
  "@context": {
    "@vocab": "https://w3id.org/facis/dcs/ontology/v1#",
    "dcs": "https://w3id.org/facis/dcs/ontology/v1#",
    "xsd": "http://www.w3.org/2001/XMLSchema#"
  },
  "@id": "urn:doc:amendment-base",
  "@type": "ContractTemplate",
  "documentTitle": "Amendment Test Document",
  "metadata": {
    "@type": "TemplateMetadata",
    "title": "Amendment Test Document"
  },
  "documentStructure": {
    "@type": "DocumentStructure",
    "layout": [
      {
        "@type": "LayoutNode",
        "isRoot": true,
        "children": [
          "urn:doc:amendment-base#s1",
          "urn:doc:amendment-base#s2"
        ]
      },
      {
        "@type": "LayoutNode",
        "@id": "urn:doc:amendment-base#s1",
        "children": [
          "urn:doc:amendment-base#c1"
        ]
      },
      {
        "@type": "LayoutNode",
        "@id": "urn:doc:amendment-base#s2",
        "children": [
          "urn:doc:amendment-base#c2"
        ]
      }
    ],
    "blocks": [
      {
        "@type": "Section",
        "@id": "urn:doc:amendment-base#s1",
        "title": "1. Original Terms"
      },
      {
        "@type": "Clause",
        "@id": "urn:doc:amendment-base#c1",
        "content": [
          "Original clause established at document creation."
        ]
      },
      {
        "@type": "Section",
        "@id": "urn:doc:amendment-base#s2",
        "title": "2. Amendment"
      },
      {
        "@type": "Clause",
        "@id": "urn:doc:amendment-base#c2",
        "content": [
          "Amendment clause added to reflect updated terms."
        ]
      }
    ]
  }
}